2011-01-02  TOMITA Masahiro  <tommy@tmtm.org>

	* .autotest, .rspec: for autotest.

2010-12-31  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql.rb: add Mysql#close! method.

2010-12-30  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql/protocol.rb: raise ClientError::ServerGoneError when
	connection is disconnected.

2010-12-29  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql/error.rb: add Mysql::ServerError::<Error> and
	Mysql::ClientError::<Error> class.

	* spec/mysql_spec.rb: for RSpec 2

	* lib/mysql/charset.rb: add utf8mb4 charset.

2010-12-19  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql/protocol.rb: Fix: error 'Mysql::ProtocolError Invalid
	packet: f1...' occurred on MySQL 5.5

2010-06-06  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql/charset.rb: support tis620 charset.

	* lib/mysql/charset.rb, lib/mysql/protocol.rb: convert encoding to
	Encoding.default_internal.

2010-05-06  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql.rb (Mysql#connect): Fix: Mysql.connect ignore flag.

	* spec/mysql_spec.rb: use environment variables for MySQL
	connection.

2010-01-17  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql.rb (Mysql#errno): Fix: Mysql#errno's default value
	should be 0.

2010-01-16  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql.rb (Mysql#escape_string): raise error for unsafe
	multibyte charset

2010-01-15  TOMITA Masahiro  <tommy@tmtm.org>

	* Fix: When GC destroy Mysql::Stmt object, protocol error occurred

2010-01-10  TOMITA Masahiro  <tommy@tmtm.org>

	* Version 2.9.0-beta